--- a/app/views/static_page/help.html.erb
+++ b/app/views/static_page/help.html.erb
@@ -1,1 +1,11 @@
-<h1>Help Page</h1>
+<div class="row">
+  <div class="small-12 medium-12 large-12 columns">
+    <h1>Help Page</h1>
+  </div>
+</div>
+
+
+
+
+
+
