--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Welcome to the Authentication App</h1>
+<div class="row">
+  <div class="small-12 medium-12 large-12 columns">
+    <h1>Welcome to the Authentication App</h1>
+  </div>
+</div>
+
+
+
 
