--- a/app/assets/stylesheets/customized_style.scss
+++ b/app/assets/stylesheets/customized_style.scss
@@ -1,3 +1,11 @@
-.columns {
+// COMMON
+:root {
+  font-size: calc(0.5em + 0.7vw);
+}
+
+// SIGNING FORMS
+
+#sign_up {
+  margin-top: 1rem;
   text-align: center;
 }
